--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,7 +1,7 @@
 
 
 .login_logo{
-    height: 140px;
+    height: 120px;
 }
 
 
@@ -138,7 +138,7 @@
 .label{
 	font-size: 13px;
 	color: #606770;
-	/* font-weight: bold; */
+	 font-weight: bold; 
 	float: left;
 	margin-left: 2px;
 	margin-bottom: 4px;
